--- a/css/styles.css
+++ b/css/styles.css
@@ -13,8 +13,9 @@ p {
 }
 ul {
   list-style: none;
-  margin-bottom: 0;
-  margin-top: 0;
+  padding: 0;
+  margin: 0;
+  padding-left: 0;
 }
 a {
   text-decoration: none;
@@ -22,10 +23,15 @@ a {
   margin-top: 0;
 }
 .header {
-  padding-top: ;
-  padding-bottom: ;
+  border-bottom: 1px solid #e7e9fc;
+}
+.header-container {
+  display: flex;
+  align-items: center;
 }
 .header-navigation {
+  display: flex;
+  align-items: center;
 }
 .header-logo {
   font-family: "Raleway", sans-serif;
@@ -35,6 +41,7 @@ a {
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #4d5ae5;
+  margin-right: 76px;
 }
 .logo-stu {
   color: #2e2f42;
@@ -43,13 +50,18 @@ a {
   font-weight: 500;
   font-size: 16px;
   color: #2e2f42;
+  display: flex;
+  gap: 40px;
 }
+
 .header-menu-item {
 }
 .header-menu-lfirst {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  padding: 24px 0;
+  display: block;
 }
 .header-menu-lfirst:hover {
   color: #404bbf;
@@ -59,8 +71,11 @@ a {
 }
 .header-contact {
   font-style: normal;
+  margin-left: auto;
 }
 .header-contact-list {
+  display: flex;
+  gap: 40px;
 }
 .header-contact-item {
 }
@@ -76,7 +91,11 @@ a {
   color: #404bbf;
 }
 .hero {
+}
+.hero-wrap {
   background: #2e2f42;
+  padding: 188px 292px 472px;
+  height: 600px;
 }
 .hero-title {
   font-weight: 700;
@@ -95,6 +114,10 @@ a {
   color: #fff;
   background: #4d5ae5;
   cursor: pointer;
+  padding: 16px 32px 16px 32px;
+  margin-top: 48px;
+  margin-left: 164px;
+  margin-right: 163px;
 }
 .hero-order-btn:hover {
   background-color: #404bbf;
@@ -102,16 +125,33 @@ a {
 .hero-order-btn:focus {
   background-color: #404bbf;
 }
+/* strategy */
+.conteiner-list {
+  padding: 156px 120px 156px;
+}
 .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
   overflow: hidden;
 }
 .container {
-  width: 1166px;
-  padding-left: 15px;
-  padding-right: 15px;
+  width: 1158px;
+  padding: 0 15px;
+  margin: 0 auto;
+}
+.header-container {
+  display: flex;
 }
 .strategy-list {
 }
+
 .strategy-item {
 }
 .strategy-title {
@@ -120,6 +160,8 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
+  margin-right: 32px;
 }
 .strategy-subtitle {
   font-size: 16px;
