--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,6 @@ p {
 }
 ul {
   list-style: none;
-  padding: 0;
   margin: 0;
   padding-left: 0;
 }
@@ -21,6 +20,14 @@ a {
   text-decoration: none;
   margin-bottom: 0;
   margin-top: 0;
+}
+img {
+  display: block;
+  max-width: 100%;
+  /*height: auto;
+  .card.no-gap {
+    display: block;
+  /* } */
 }
 .header {
   border-bottom: 1px solid #e7e9fc;
@@ -92,11 +99,17 @@ a {
 }
 /*hero*/
 .hero {
+  box-sizing: content-box;
+  /* width: 1440px;
+height: 600px; */
+  background: #2e2f42;
+  padding-top: 188px;
+  padding-bottom: 188px;
 }
 .hero-wrap {
-  background: #2e2f42;
-  padding: 188px 292px 472px;
-  height: 600px;
+  /* background: #2e2f42; */
+  /* padding: 188px 292px 472px;* */
+  /* height: 600px; */
 }
 .hero-title {
   font-weight: 700;
@@ -105,6 +118,10 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #fff;
+  max-width: 496px;
+
+  margin: 0 auto;
+  padding-bottom: 48px;
 }
 .hero-order-btn {
   font-family: "Roboto", sans-serif;
@@ -115,10 +132,12 @@ a {
   color: #fff;
   background: #4d5ae5;
   cursor: pointer;
-  padding: 16px 32px 16px 32px;
-  margin-top: 48px;
-  margin-left: 164px;
-  margin-right: 163px;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  margin: 0 auto;
 }
 .hero-order-btn:hover {
   background-color: #404bbf;
@@ -180,8 +199,7 @@ a {
   background-color: #f4f4fd;
   padding: 120px 0;
 }
-.cont-team {
-}
+
 .team-title {
   font-weight: 700;
   font-size: 36px;
@@ -202,14 +220,18 @@ a {
   border-radius: 0px 0px 4px 4px;
   width: calc((100% - 72px) / 4);
 }
-.team-image {
-  background-color: #ffffff;
-
-  /*padding-top: 32px;
+.cont-team {
+  border-radius: 0px, 0px, 4px, 4px;
+  padding-top: 32px;
   padding-bottom: 32px;
-  
-  width: calc((100% - 72px) / 4);*/
 }
+
+.team-image {
+  /*background-color: #ffffff;
+  border-radius: 0px, 0px, 4px, 4px;
+  /* width: calc((100% - 72px) / 4);8 */
+}
+
 .team-item-title {
   font-weight: 500;
   font-size: 20px;
@@ -217,6 +239,7 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .team-subtitle {
   font-size: 16px;
@@ -225,7 +248,12 @@ a {
   text-align: center;
   color: #434455;
 }
+/*portfolio*/
+
 .portfolio {
+  padding: 120px 0px 120px 0px;
+  /* padding-top: 120px;
+  padding-bottom: 120px;*/
 }
 .portfolio-title {
   font-weight: 700;
@@ -235,12 +263,25 @@ a {
   text-align: center;
   color: #2e2f42;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  row-gap: 48px;
 }
 .portfolio-item {
+  width: calc((100% - 48px) / 3);
 }
-.portfolio-image {
+.cont-item {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+.portfolio-image-4 {
+  /*  padding-top: 120px;
+  /* padding-bottom: 120px; */
 }
 .portfolio-item-title {
   font-weight: 500;
@@ -248,6 +289,7 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .portfolio-subtitle {
   font-size: 16px;
@@ -255,8 +297,10 @@ a {
   letter-spacing: 0.02em;
   color: #434455;
 }
+/*footer-flow*/
 .flow {
   background: #2e2f42;
+  padding: 100px 0;
 }
 .flow-logo {
   line-height: 1.17;
@@ -266,10 +310,12 @@ a {
 }
 .flow-logo-stu {
   color: #f4f4fd;
+  display: inline-block;
 }
 .flow-subtitle {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: #f4f4fd;
+  max-width: 264px;
 }
