--- a/css/styles.css
+++ b/css/styles.css
@@ -24,11 +24,12 @@ a {
 img {
   display: block;
   max-width: 100%;
-  /*height: auto;
-  .card.no-gap {
+  height: auto;
+}
+/*.card.no-gap {
     display: block;
   /* } */
-}
+
 .header {
   border-bottom: 1px solid #e7e9fc;
 }
